# TransPilot

./: .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.en.md  README.fr.md  README.md  RELEASES.md  index.html  package-lock.json  package.json  vite.config.ts  工作日志.md  帮助文档.md  开发方案.md  普通用户下载版帮助文档.md  管理员部署版帮助文档.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/services/: modelService.ts
src/types/: model.ts
