[package]
name = "desktop-screenshot-translator"
version = "0.1.0"
description = "Windows screenshot translator backed by a local multimodal model"
authors = ["Codex"]
edition = "2021"

[lib]
name = "desktop_screenshot_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
